updated request access setting to be a boolean rather than a string

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -95,7 +95,7 @@
         </div>
         </li>
         {% else %} <!-- if user is not logged in -->
-        {% if request_access == 'True' %}
+        {% if request_access %}
         <li class="right-nav-links {% if request.get_full_path == '/about/' %} active {% endif %}">
           <a href="/accounts/request-access/" class="btn btn-link-alt">
             <i class="fa fa-group nav-icon"></i> Request Access
