--- a/server/portal/apps/accounts/templates/portal/apps/accounts/login.html
+++ b/server/portal/apps/accounts/templates/portal/apps/accounts/login.html
@@ -18,7 +18,7 @@
             Log in with TACC
           </a>
         </p>
-          {% if request_access == 'True' %}
+          {% if request_access %}
         <h4> If you need to create an account to login, please request access by
          clicking the "Request Access" link above. </h4>
           {% endif %}
