--- a/client/src/angular/workspace/templates/agave-file-picker.html
+++ b/client/src/angular/workspace/templates/agave-file-picker.html
@@ -3,9 +3,9 @@
         <span class="input-group-btn">
           <button ng-click="wantFile($event)" class="btn btn-default" type="button">Select</button>
         </span>
-        <input type="text" class="form-control" ng-model="data.input" placeholder="{{form.placeholder || 'Click to select input data'}}" />
+        <input type="text" class="form-control" ng-model="data.input" placeholder="{{form.placeholder || 'Click the Select button to browse for data'}}" />
     </div>
     <span class="help-text" ng-if="requesting">
-        <button type="button" class="btn btn-xs btn-link" ng-click="stopWant($event)">Cancel</button>
+        <button type="button" class="btn btn-xs btn-link agave-file-picker-cancel" ng-click="stopWant($event)">Cancel</button>
     </span>
 </div>
