--- a/devops/ansible/playbooks/roles/project_setup/templates/settings_secret.j2
+++ b/devops/ansible/playbooks/roles/project_setup/templates/settings_secret.j2
@@ -4,9 +4,9 @@
 
 import os
 {% for setting_key, item in django_settings_secret.iteritems() %}
-  {% if item is string %}
-{{setting_key}} = "{{item}}"
-  {% else %}
+    {% if item is string %}
+{{setting_key}} = r"""{{ item}}"""
+    {% else %}
 {{setting_key}} = {{item}}
-  {% endif %}
+    {% endif %}
 {% endfor %}
