convert to py3/django2; cleanup

--- a/server/portal/templates/includes/footer.html
+++ b/server/portal/templates/includes/footer.html
@@ -1,4 +1,4 @@
-{% load staticfiles cms_tags %}
+{% load staticfiles %}
 <footer class="container-fluid">
   {% static_placeholder 'site_footer' site or %}
   
