--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -1,4 +1,4 @@
-{% load cms_tags staticfiles sekizai_tags menu_tags recaptcha2 %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -26,11 +26,10 @@
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.main.css %>">
     {% block styles %}{% endblock %}
     {% render_block "css" %}
-    {% recaptcha_init 'en' %}
   </head>
   <body ng-app="portal">
     <div class="content">
-      {% cms_toolbar %}
+      {# {% cms_toolbar %} #}
       {# {% include 'includes/header.html' %}#}
       {% include 'includes/navigation.html' %}
       {% include 'includes/messages.html' %}
