--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load cms_tags staticfiles sekizai_tags menu_tags recaptcha2 %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -18,31 +18,29 @@
     {% block head_extra %}{% endblock %}
     <!-- styles -->
     <!-- Vendor CSS -->
-    <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.vendor.css %>">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
-    <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.main.css %>">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     {% block styles %}{% endblock %}
     {% render_block "css" %}
+    {# {% recaptcha_init 'en' %} #}
   </head>
-  <body ng-app="portal">
+  <body>
     <div class="content">
-      {# {% cms_toolbar %} #}
+      {% cms_toolbar %}
       {# {% include 'includes/header.html' %}#}
       {% include 'includes/navigation.html' %}
       {% include 'includes/messages.html' %}
       {% block breadcrumb %}{% endblock %}
       {% block content %}{% endblock %}
     </div>
+    <div id="root"></div>
     {% include 'includes/footer.html' %}
     <!-- scripts -->
     <!-- Vendor base JS -->
-    <script src="<%= htmlWebpackPlugin.files.chunks.vendor.entry %>"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    {# <script src="<htmlWebpackPlugin.files.chunks.vendor.entry>"></script> #}
     <!-- Custom base js -->
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+
       <!-- Extended templates JS -->
     {% block scripts %}{% endblock %}
     <!-- User Auth Check -->
