--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -1,4 +1,4 @@
-{% load cms_tags staticfiles sekizai_tags menu_tags recaptcha2 %}
+{% load cms_tags staticfiles sekizai_tags menu_tags %}
 <!DOCTYPE html>
 <html>
   <head>
