--- a/server/portal/templates/includes/footer.html
+++ b/server/portal/templates/includes/footer.html
@@ -1,7 +1,6 @@
-{% load staticfiles %}
+{% load staticfiles cms_tags %}
 <footer class="container-fluid">
   {% static_placeholder 'site_footer' site or %}
-  
+
   {% endstatic_placeholder %}
 </footer>
-<div id="toast-container"></div>
