fix a few more things

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -50,7 +50,7 @@
                 <i class="fa fa-ticket nav-icon"></i> My Tickets
               </a>
               <!-- {% if user.is_staff %}
-              <a class="dropdown-item" href="{% url 'portal_onboarding:admin' %}">
+              <a class="dropdown-item" href="{ url 'portal_onboarding:admin' }">
                 <i class="fa fa-users"></i> &nbsp;Onboarding
               </a>
               {% endif %} -->
