--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -19,8 +19,10 @@
   margin: 1.5rem 0 0.5rem 1rem;
 }
 .manage-account-table {
-  display: flex;
-  flex-direction: row;
+  width: 100%;
+  tbody {
+    display: flex;
+  }
   tr {
     display: flex;
     flex-direction: column;
@@ -29,8 +31,7 @@
       background-color: rgba(#c6c6c6, 0.5);
     }
   }
-  th, td {
-    
-    border-bottom: 1px solid black;
+  td, th {
+    height: 2rem;
   }
 }
