--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -1,4 +1,5 @@
 $data-files-wrapper-horizontal-padding: 20px;
+$frontera-portal-color-primary: #9d85ef;
 
 .data-files-sidebar {
   width: 165px;
@@ -42,3 +43,55 @@ $data-files-wrapper-horizontal-padding: 20px;
       the negative space created from `data-files-wrapper`'s `padding` */
   margin-left: -$data-files-wrapper-horizontal-padding;
 }
+
+.dropdown-menu {
+  border-color: $frontera-portal-color-primary;
+  border-radius: 0;
+  margin-top: 11px;
+  padding: 0;
+  left: -20px;
+}
+.dropdown-menu:before {
+  position: absolute;
+  top: -10px;
+  left: 65px;
+  display: inline-block;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid $frontera-portal-color-primary;
+  border-left: 10px solid transparent;
+  content: '';
+}
+.dropdown-menu:after {
+  position: absolute;
+	top: -9px;
+	left: 66px;
+	display: inline-block;
+	border-right: 9px solid transparent;
+	border-bottom: 9px solid #ffffff;
+	border-left: 9px solid transparent;
+	content: '';
+}
+
+.border-top-menu-item {
+  border-top: 1px solid #707070;
+}
+
+.multiline-menu-item-wrapper {
+  display: inline-block;
+  padding-left: 5px;
+  line-height: 1.1em;
+  small {
+    display: block;
+  }
+}
+
+.dropdown-item{
+  padding: .25rem 1rem;
+  i {
+      padding-right: 10px;
+  }
+}
+
+.dropdown-item:focus, .dropdown-item:hover {
+    background-color: #E6E0FB;
+  }
