--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -2,10 +2,15 @@ $containerColor: #f4f4f4;
 $linkColor: #707070;
 $linkBackgroundColor: #dfdaf5;
 
+@mixin zealousWidthConstraint($width) {
+    min-width: $width;
+    max-width: $width;
+    width: $width;
+}
+
 .container {
-    min-width: 215px;
-    max-width: 215px;
-    width: 215px;
+    @include zealousWidthConstraint(215px);
+
     background: $containerColor;
     border-right: 1px solid rgba(112, 112, 112, .25);
     padding-top: 20px;
