Fixing UI naming convention. Deleting extra line with a blank space.

--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -72,7 +72,7 @@ $frontera-portal-color-primary: #9d85ef;
 	content: '';
 }
 
-.border-top-menu-item {
+.complex-dropdown-item {
   border-top: 1px solid #707070;
 }
 
