Modal header & form styling and yup schema edits
Styling

--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -52,6 +52,13 @@
 }
 .manage-account-modal-header {
   background-color: #f4f4f4;
+  background-color: #F4F4F4;
+  padding: 1rem;
+  span {
+      color: #484848;
+      font-size: 1.1rem;
+      margin: 0;
+  }
 }
 /*
   Component Selectors
