Get form component text size to match rest of ticket forms

--- a/client/src/components/Tickets/TicketCreateForm.scss
+++ b/client/src/components/Tickets/TicketCreateForm.scss
@@ -7,6 +7,11 @@
     font-size: 0.75rem;
     font-style: italic;
   }
+
+  /* alter bootstrap size to match font-size for rest of ticket forms */
+  .col-form-label-sm {
+    font-size: 0.75rem;
+  }
 }
 
 .ticket-description-group {
