--- a/client/src/components/_common/Form/FormField.scss
+++ b/client/src/components/_common/Form/FormField.scss
@@ -1,13 +1,13 @@
-.form-label {
+.form-field__label {
   font-weight: bold;
 }
 
-.form-help {
+.form-field__help {
   font-style: italic;
   font-weight: 400;
 }
 
-.form-validation-error {
+.form-field__validation-error {
   font-size: 0.8rem;
   color: #EB6E6E;
   padding-top: 5px;
