--- a/client/src/components/DataFiles/DataFiles.scss
+++ b/client/src/components/DataFiles/DataFiles.scss
@@ -11,6 +11,9 @@
     /* Styles as a flex parent */
     display: flex;
     flex-direction: row;
+    /* FAQ: Redundant, but offers clarity. Child must NOT use `height: 100%`;
+            Safari renders child w/ `height: 100%` as if it's `height: auto` */
+    align-items: stretch;
 }
 /* Make right-most item fill up remaining vertical space */
 .data-files-items > :last-child {
