--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -18,17 +18,16 @@
     padding-left: 0;
 }
 #allocations-wrapper {
-    /* Styles as a flex parent */
     display: flex;
     flex-direction: column;
 
     padding-right: 32px;
 }
 #allocations-container {
-    /* Styles as a flex child */
+    /* As a flex item */
     flex-grow: 1;
 
-    /* Styles as a flex parent */
+    /* As a flex container */
     display: flex;
     flex-direction: row;
 
