--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
 }
-/* Make bottom item fill up remaining vertical space */
+/* Make bottom-most item fill up remaining vertical space */
 .dashboard-items > :last-child {
     flex-grow: 1;
 }
